--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="pl-PL">
 <head>
-  <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+  <meta http-equiv="content-type" content="te`xt/html;charset=UTF-8" />
   <meta charset="utf-8">
   <meta property="og:locale" content="pl_PL">
   <meta content="text/html; charset=utf-8" http-equiv="content-type">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Dzianis Makeichyk │ Front End Developer</title>
+  <title>Fest</title>
   <!-- Social Meta -->
   <meta name="author" content="Dzianis Makeichyk" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -14,9 +14,53 @@
   <meta name="format-detection" content="telephone=no">
   <meta name="theme-color" content="#272727">
   <link rel='stylesheet' href='./css/main.css' type='text/css' media='all' />
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.0.0-beta.3/assets/owl.carousel.min.css' type='text/css' media='all' />
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.0.0-beta.3/assets/owl.theme.default.min.css' type='text/css' media='all' />
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.0.0-beta.3/owl.carousel.min.js"></script>
+  <script src="./scripts/scripts.js"></script>
 </head>
 <body>
 <header>
   hello
 </header>
+<main>
+  <div id="sync1" class="owl-carousel owl-theme">
+    <div class="item">
+      <h1>1</h1></div>
+    <div class="item">
+      <h1>2</h1></div>
+    <div class="item">
+      <h1>3</h1></div>
+    <div class="item">
+      <h1>4</h1></div>
+    <div class="item">
+      <h1>5</h1></div>
+    <div class="item">
+      <h1>6</h1></div>
+    <div class="item">
+      <h1>7</h1></div>
+    <div class="item">
+      <h1>8</h1></div>
+  </div>
+
+  <div id="sync2" class="owl-carousel owl-theme">
+    <div class="item">
+      <h1>1</h1></div>
+    <div class="item">
+      <h1>2</h1></div>
+    <div class="item">
+      <h1>3</h1></div>
+    <div class="item">
+      <h1>4</h1></div>
+    <div class="item">
+      <h1>5</h1></div>
+    <div class="item">
+      <h1>6</h1></div>
+    <div class="item">
+      <h1>7</h1></div>
+    <div class="item">
+      <h1>8</h1></div>
+  </div>
+</main>
 </body>
