--- a/public/index.html
+++ b/public/index.html
@@ -22,45 +22,201 @@
 </head>
 <body>
 <header>
-  hello
+  <div class="header_container">
+    <div class="pull_left">
+      <img class="logo" src="./img/logo.png" alt="#" role="presentation" />
+      <div class="header_date">
+        <p>
+          <span class="bold">Luty</span>
+          <span>2017</span>
+        </p>
+      </div>
+    </div>
+    <div class="pull_right">
+      <a href="#" class="toggle_menu">
+        <button class="burger"></button>
+      </a>
+      <div class="fullscreen-navigation">
+        <div class="inner-wrap">
+          <nav>
+            <ul>
+              <li><a href="#">O nas</a></li>
+              <li><a href="#">Filmy</a></li>
+              <li><a href="#">Kina</a></li>
+              <li><a href="#">Kontakt</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
+  </div>
 </header>
 <main>
   <div id="sync1" class="owl-carousel owl-theme">
-    <div class="item">
-      <h1>1</h1></div>
-    <div class="item">
-      <h1>2</h1></div>
-    <div class="item">
-      <h1>3</h1></div>
-    <div class="item">
-      <h1>4</h1></div>
-    <div class="item">
-      <h1>5</h1></div>
-    <div class="item">
-      <h1>6</h1></div>
-    <div class="item">
-      <h1>7</h1></div>
-    <div class="item">
-      <h1>8</h1></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
   </div>
 
   <div id="sync2" class="owl-carousel owl-theme">
-    <div class="item">
-      <h1>1</h1></div>
-    <div class="item">
-      <h1>2</h1></div>
-    <div class="item">
-      <h1>3</h1></div>
-    <div class="item">
-      <h1>4</h1></div>
-    <div class="item">
-      <h1>5</h1></div>
-    <div class="item">
-      <h1>6</h1></div>
-    <div class="item">
-      <h1>7</h1></div>
-    <div class="item">
-      <h1>8</h1></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
   </div>
+  <!-- About -->
+  <section class="about">
+    <div class="container">
+      <div class="about_block blood_block">
+        <p class="bold">O nas</p>
+      </div>
+      <div class="about_box">
+        <img src="./img/fest_plakat.png" class="about_fest" alt="#" role="presentation" />
+        <div class="about_fest_text">
+          <p>
+            <span class="red bold">FEST MAKABRA</span>
+            to nowy, ogólnopolski przegląd filmowy, prezentujący zagraniczne filmy z pogranicza horroru, thrillera, mrocznego fantasy i czarnej komedii. Większość filmów z programu zostanie wyświetlona w Polsce premierowo i będzie to jedyna okazja do obejrzenia ich na wielkim ekranie. Pierwsza edycja przeglądu filmowego FEST MAKABRA odbędzie się w kinach studyjnych i niezależnych w całej Polsce w lutym 2017 roku.
+            Organizatorem wydarzenia jest dystrybutor filmów Kino Świat.
+          </p>
+          <p>
+            <span class="red bold">KINO ŚWIAT</span>
+             – polska firma dystrybucyjna założona w 2001 roku, zajmująca się dystrybucją kina polskiego i zagranicznego. Dwukrotny laureat przyznawanej przez PISF nagrody w kategorii Najlepsza dystrybucja filmu polskiego oraz wielokrotny zdobywca „Złotych biletów” branżowego
+            Forum Wokół Kina. W katalogu KINO ŚWIAT znajdują się największe hity kinowe ostatnich lat:
+          </p>
+          <span class="about_movies red bold">„Pitbull: Niebezpieczne kobiety”</span>
+          <span class="about_movies bold">„Ostatnia rodzina”</span>
+          <span class="about_movies red bold">„Pod mocnym aniołem”</span>
+          <span class="about_movies bold">„Planeta singli”</span>
+          <span class="about_movies red bold">„Listy do M. 2”</span>
+          <span class="about_movies bold">„Jesteś Bogiem”</span>
+          <span class="about_movies red bold">„Miasto 44”</span>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- END About -->
+  <!-- Movies -->
+  <section class="movies">
+    <div class="container">
+      <div class="movies_block blood_block top">
+        <p class="bold">Filmy</p>
+      </div>
+      <ul class="grid_movie">
+        <!-- 1 -->
+        <li class="one_shot_movie">
+          <p class="name_movie bold">Bodom</p>
+          <img src="./img/movies/bodom.png" class="shot_movie" role="presentation" alt="#" />
+        </li>
+        <!-- 2 -->
+        <li class="one_shot_movie">
+          <p class="name_movie bold">
+            Amerykański
+            <br />
+            Burger
+          </p>
+          <img src="./img/movies/burger.png" class="shot_movie" role="presentation" alt="#" />
+        </li>
+        <!-- 3 -->
+        <li class="one_shot_movie">
+          <p class="name_movie bold">Bodom</p>
+          <img src="./img/movies/bodom.png" class="shot_movie" role="presentation" alt="#" />
+        </li>
+        <!-- 4 -->
+        <li class="one_shot_movie">
+          <p class="name_movie bold">
+            Amerykański
+            <br />
+            Burger
+          </p>
+          <img src="./img/movies/burger.png" class="shot_movie" role="presentation" alt="#" />
+        </li>
+        <!-- 5 -->
+        <li class="one_shot_movie">
+          <p class="name_movie bold">
+            Klątwa Śpiącej
+            <br/>
+            Królewny
+          </p>
+          <img src="./img/movies/klatwa.png" class="shot_movie" role="presentation" alt="#" />
+        </li>
+        <!-- 6 -->
+        <li class="one_shot_movie">
+          <p class="name_movie bold">
+            Atak krwiożerczych
+            <br/>
+            donatów
+          </p>
+          <img src="./img/movies/atack.png" class="shot_movie" role="presentation" alt="#" />
+        </li>
+        <!-- 7 -->
+        <li class="one_shot_movie">
+          <p class="name_movie bold">
+            Pod mroczną górą
+          </p>
+          <img src="./img/movies/side.png" class="shot_movie" role="presentation" alt="#" />
+        </li>
+      </ul>
+    </div>
+  </section>
+  <!-- END Movies -->
+  <!-- Cinemas -->
+  <section class="cinema">
+    <div class="container">
+      <div class="movies_block blood_block top">
+        <p class="bold">Kina</p>
+      </div>
+      <div class="cinema_city">
+        <p class="red bold">Warszawa</p>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">Cinema City</p>
+          <p class="cinema_shot_date">11/12/2017</p>
+          <img class="cinema_shot_img" src="#" alt="#" role="presentation" />
+        </div>
+        <div class="separator"></div>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">Multikino</p>
+          <p class="cinema_shot_date">11/12/2017</p>
+          <img class="cinema_shot_img" src="#" alt="#" role="presentation" />
+        </div>
+      </div>
+      <div class="cinema_city">
+        <p class="red bold">Katowice</p>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">Cinema City</p>
+          <p class="cinema_shot_date">11/12/2017</p>
+          <img class="cinema_shot_img" src="#" alt="#" role="presentation" />
+        </div>
+        <div class="separator"></div>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">Multikino</p>
+          <p class="cinema_shot_date">11/12/2017</p>
+          <img class="cinema_shot_img" src="#" alt="#" role="presentation" />
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- END Cinemas -->
+  <!-- Contact -->
+  <section class="contact">
+    <div class="container">
+      <div class="movies_block blood_block top">
+        <p class="bold">Kontakt</p>
+      </div>
+      <div class="contact_info">
+        <p class="bold">Patronat, Informacja</p>
+        <a class="blue" href="mailto:kontakt@festmakabra.pl">kontakt@festmakabra.pl</a>
+        <p class="bold">Kina i Organizacja Pokazów</p>
+        <a class="blue" href="mailto:tomek.kocwin@kinoswiat.pl">tomek.kocwin@kinoswiat.pl</a>
+      </div>
+    </div>
+  </section>
+  <!-- End Contact -->
 </main>
 </body>
