--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
         <div class="inner-wrap">
           <nav>
             <ul>
-              <li><a href="#">O nas</a></li>
+              <li><a href="#" class="red">O nas</a></li>
               <li><a href="#">Filmy</a></li>
               <li><a href="#">Kina</a></li>
               <li><a href="#">Kontakt</a></li>
@@ -63,13 +63,30 @@
   </div>
 
   <div id="sync2" class="owl-carousel owl-theme">
-    <div class="item"></div>
-    <div class="item"></div>
-    <div class="item"></div>
-    <div class="item"></div>
-    <div class="item"></div>
-    <div class="item"></div>
-    <div class="item"></div>
+    <div class="item">
+      <img src="./img/movies/burger.png" class="shot_movie" role="presentation" alt="#" />
+    </div>
+    <div class="item">
+      <img src="./img/movies/bodom.png" class="shot_movie" role="presentation" alt="#" />
+    </div>
+    <div class="item">
+      <img src="./img/movies/burger.png" class="shot_movie" role="presentation" alt="#" />
+    </div>
+    <div class="item">
+      <img src="./img/movies/klatwa.png" class="shot_movie" role="presentation" alt="#" />
+    </div>
+    <div class="item">
+      <img src="./img/movies/atack.png" class="shot_movie" role="presentation" alt="#" />
+    </div>
+    <div class="item">
+      <img src="./img/movies/side.png" class="shot_movie" role="presentation" alt="#" />
+    </div>
+    <div class="item">
+      <img src="./img/movies/bodom.png" class="shot_movie" role="presentation" alt="#" />
+    </div>
+    <div class="item">
+      <img src="./img/movies/bodom.png" class="shot_movie" role="presentation" alt="#" />
+    </div>
   </div>
   <!-- About -->
   <section class="about">
@@ -164,6 +181,62 @@
         </li>
       </ul>
     </div>
+    <div class="pop_up">
+      <div class="container">
+        <svg class="movie_cross" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+           viewBox="0 0 371.23 371.23" style="enable-background:new 0 0 371.23 371.23;" xml:space="preserve">
+        <polygon points="371.23,21.213 350.018,0 185.615,164.402 21.213,0 0,21.213 164.402,185.615 0,350.018 21.213,371.23
+          185.615,206.828 350.018,371.23 371.23,350.018 206.828,185.615 "/>
+        </svg>
+      <div class="pop_up_left">
+        <img src="img/movies/bodom.png" class="pop_up_image" alt="#" role="presentation" />
+        <div class="pop_up_buttons">
+          <a href="#" class="pop_up_view">zobacz zwiastun</a>
+          <a href="#" class="pop_up_view">pobierz presspack</a>
+        </div>
+      </div>
+      <div class="pop_up_right">
+        <p class="movie_name_point bold red">Bodom</p>
+        <p class="movie_description"><span class="white_sepo">Finlandia, Estonia 2016 </span><span class="white_sepo">85 min </span><span class="white_sepo">horror </span><span class="white_sepo">reż: Taneli Mustonen </span></p>
+        <p class="movie_name">
+          <span class="movie_obsada bold">Obsada:</span>
+          <span class="white_sepo">Nelly Hirst-Gee</span>
+          <span class="white_sepo">Santeri Helinheimo Mäntylä</span>
+          <span class="white_sepo">Mimosa Willamo</span>
+          <span class="white_sepo">Mimosa Gabriel</span>
+        </p>
+        <p class="movie_short red bold">
+          Brutalny fiński horror inspirowany prawdziwą masakrą nad jeziorem Bodom z 1960 roku, która wstrząsnęła całym krajem i do dziś budzi gorące emocje. Reżyser filmu, Taneli Mustonen, znalazł się na liście 10 najbardziej utalentowanych młodych filmowców ze Skandynawii,
+          przygotowanej przez prestiżowy magazyn Variety.
+        </p>
+        <p class="movie_short">
+          Latem 1960 roku czworo obozujących nad jeziorem nastolatków zostaje brutalnie zaatakowanych nożem podczas snu. Masakrę przeżywa tylko jedno z nich, jednakże nic nie pamięta z koszmarnej nocy, a sam morderca nie zostaje zidentyfikowany ani ujęty. Legendy głoszą, że do dziś ukrywa się w pobliskich lasach. Pół wieku później obozowisko nad jeziorem Bodom odwiedza grupa młodych śmiałków z nadzieją na dobrą zabawę i rozwiązanie tajemniczej sprawy poprzez szczegółowe odtworzenie okrutnego morderstwa. Gdy zapada noc, okazuje się jednak, że nie wszyscy przybyli tu z czystymi intencjami. Stawką w pełnej zaskakujących zwrotów akcji śmiertelnej grze będzie
+          ich życie.
+        </p>
+        <p class="movie_name bold">
+          Media o filmie
+        </p>
+        <p class="movie_press">
+          „Znakomity fiński slasher” –
+          <span class="red bold">The Hollywood Reporter</span>
+        </p>
+        <p class="movie_press">
+          “Inteligentny” –
+          <span class="red bold">Screendaily</span>
+        </p>
+        <p class="movie_press">
+          “Zaskakujący”  –
+          <span class="red bold">Horrorfreaknews</span>
+        </p>
+        <div class="movie_skin">
+          <img src="./img/other/bodom_skin.png" class="movie_skin_one" alt="" role="presentation"/>
+          <img src="./img/other/bodom_skin.png" class="movie_skin_one" alt="" role="presentation"/>
+          <img src="./img/other/bodom_skin.png" class="movie_skin_one" alt="" role="presentation"/>
+          <img src="./img/other/bodom_skin.png" class="movie_skin_one" alt="" role="presentation"/>
+        </div>
+      </div>
+      </div>
+    </div>
   </section>
   <!-- END Movies -->
   <!-- Cinemas -->
@@ -219,4 +292,49 @@
   </section>
   <!-- End Contact -->
 </main>
+<footer>
+  <div class="container">
+    <div class="pull_left_footer">
+      <!-- O nas -->
+      <ul class="footer_point">
+        <span class="bold">
+          O nas
+        </span>
+      </ul>
+      <!-- END O nas -->
+      <!-- Filmy-->
+      <ul class="footer_point">
+        <span class="bold">
+          Filmy
+        </span>
+        <li class="footer_point_one"><a href="#">Bodom</a></li>
+        <li class="footer_point_one"><a href="#">Amerykański burger</a></li>
+        <li class="footer_point_one"><a href="#">Klątwa Śpiącej Królewny</a></li>
+        <li class="footer_point_one"><a href="#">Atak krwiożerczych donatów</a></li>
+        <li class="footer_point_one"><a href="#">Pod mroczną górą</a></li>
+        <li class="footer_point_one"><a href="#">Pod mroczną górą</a></li>
+        <li class="footer_point_one"><a href="#">Lament</a></li>
+      </ul>
+      <!-- END Filmy -->
+      <!-- Kina -->
+      <ul class="footer_point">
+        <span class="bold">
+          Kina
+        </span>
+      </ul>
+      <!-- END Kina -->
+      <!-- Kontakt -->
+      <ul class="footer_point">
+        <span class="bold">
+          Kontakt
+        </span>
+      </ul>
+      <!-- END Kontakt -->
+    </div>
+    <div class="pull_right_footer">
+      <img class="logo" src="./img/logo.png" alt="#" role="presentation" />
+    </div>
+  </div>
+</footer>
 </body>
+</html>
