--- a/public/index.html
+++ b/public/index.html
@@ -87,6 +87,9 @@
     <div class="item">
       <img src="./img/movies/bodom.png" class="shot_movie" role="presentation" alt="#" />
     </div>
+    <div class="item">
+      <img src="./img/movies/bodom.png" class="shot_movie" role="presentation" alt="#" />
+    </div>
   </div>
   <!-- About -->
   <section class="about">
@@ -250,13 +253,13 @@
         <div class="cinema_shot">
           <p class="cinema_shot_name">Cinema City</p>
           <p class="cinema_shot_date">11/12/2017</p>
-          <img class="cinema_shot_img" src="#" alt="#" role="presentation" />
+          <img class="cinema_shot_img cc" src="./img/other/cinemacity.png" alt="#" role="presentation" />
         </div>
         <div class="separator"></div>
         <div class="cinema_shot">
           <p class="cinema_shot_name">Multikino</p>
           <p class="cinema_shot_date">11/12/2017</p>
-          <img class="cinema_shot_img" src="#" alt="#" role="presentation" />
+          <img class="cinema_shot_img" src="./img/other/multikino.png" alt="#" role="presentation" />
         </div>
       </div>
       <div class="cinema_city">
@@ -264,13 +267,13 @@
         <div class="cinema_shot">
           <p class="cinema_shot_name">Cinema City</p>
           <p class="cinema_shot_date">11/12/2017</p>
-          <img class="cinema_shot_img" src="#" alt="#" role="presentation" />
+          <img class="cinema_shot_img cc" src="./img/other/cinemacity.png" alt="#" role="presentation" />
         </div>
         <div class="separator"></div>
         <div class="cinema_shot">
           <p class="cinema_shot_name">Multikino</p>
           <p class="cinema_shot_date">11/12/2017</p>
-          <img class="cinema_shot_img" src="#" alt="#" role="presentation" />
+          <img class="cinema_shot_img" src="./img/other/multikino.png" alt="#" role="presentation" />
         </div>
       </div>
     </div>
@@ -282,11 +285,15 @@
       <div class="movies_block blood_block top">
         <p class="bold">Kontakt</p>
       </div>
-      <div class="contact_info">
-        <p class="bold">Patronat, Informacja</p>
-        <a class="blue" href="mailto:kontakt@festmakabra.pl">kontakt@festmakabra.pl</a>
-        <p class="bold">Kina i Organizacja Pokazów</p>
-        <a class="blue" href="mailto:tomek.kocwin@kinoswiat.pl">tomek.kocwin@kinoswiat.pl</a>
+      <div class="contact_box">
+        <div class="contact_info">
+          <p class="bold">Patronat, Informacja</p>
+          <img src="./img/other/icon_mail.png" class="icon_mail" alt="#" role="presentation" /><a class="blue" href="mailto:kontakt@festmakabra.pl">kontakt@festmakabra.pl</a>
+          <p class="bold">Kina i Organizacja Pokazów</p>
+          <img src="./img/other/icon_mail.png" class="icon_mail" alt="#" role="presentation" />
+          <a class="blue" href="mailto:tomek.kocwin@kinoswiat.pl">tomek.kocwin@kinoswiat.pl</a>
+        </div>
+        <img src="./img/other/mail_icon.png" class="contact_icon" alt="#" role="presentation" />
       </div>
     </div>
   </section>
