--- a/public/index.html
+++ b/public/index.html
@@ -40,10 +40,10 @@
         <div class="inner-wrap">
           <nav>
             <ul>
-              <li><a href="#" class="red">O nas</a></li>
-              <li><a href="#">Filmy</a></li>
-              <li><a href="#">Kina</a></li>
-              <li><a href="#">Kontakt</a></li>
+              <li><a href="#about" class="click_menu">O nas</a></li>
+              <li><a href="#movies" class="click_menu">Filmy</a></li>
+              <li><a href="#cinema" class="click_menu">Kina</a></li>
+              <li><a href="#contact" class="click_menu">Kontakt</a></li>
             </ul>
           </nav>
         </div>
@@ -92,7 +92,7 @@
     </div>
   </div>
   <!-- About -->
-  <section class="about">
+  <section class="about" id="about">
     <div class="container">
       <div class="about_block blood_block">
         <p class="bold">O nas</p>
@@ -123,7 +123,7 @@
   </section>
   <!-- END About -->
   <!-- Movies -->
-  <section class="movies">
+  <section class="movies" id="movies">
     <div class="container">
       <div class="movies_block blood_block top">
         <p class="bold">Filmy</p>
@@ -243,7 +243,7 @@
   </section>
   <!-- END Movies -->
   <!-- Cinemas -->
-  <section class="cinema">
+  <section class="cinema" id="cinema">
     <div class="container">
       <div class="movies_block blood_block top">
         <p class="bold">Kina</p>
@@ -280,7 +280,7 @@
   </section>
   <!-- END Cinemas -->
   <!-- Contact -->
-  <section class="contact">
+  <section class="contact" id="contact">
     <div class="container">
       <div class="movies_block blood_block top">
         <p class="bold">Kontakt</p>
