--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,10 @@
         <p class="bold">O nas</p>
       </div>
       <div class="about_box">
-        <img src="./img/fest_plakat.png" class="about_fest" alt="#" role="presentation" />
+        <div class="about_image_box">
+          <img src="./img/fest_plakat.png" class="about_fest" alt="#" role="presentation" />
+          <a href="#" class="pop_up_view">pobierz presspack</a>
+        </div>
         <div class="about_fest_text">
           <p>
             <span class="red bold">FEST MAKABRA</span>
@@ -192,7 +195,6 @@
         <img src="img/movies/bodom.png" class="pop_up_image" alt="#" role="presentation" />
         <div class="pop_up_buttons">
           <a href="#" class="pop_up_view">zobacz zwiastun</a>
-          <a href="#" class="pop_up_view">pobierz presspack</a>
         </div>
       </div>
       <div class="pop_up_right">
