--- a/public/index.html
+++ b/public/index.html
@@ -53,13 +53,13 @@
 </header>
 <main>
   <div id="sync1" class="owl-carousel owl-theme">
-    <div class="item"></div>
-    <div class="item"></div>
-    <div class="item"></div>
-    <div class="item"></div>
-    <div class="item"></div>
-    <div class="item"></div>
-    <div class="item"></div>
+    <div class="item"><p class="container-text bold">bodom</p></div>
+    <div class="item"><p class="container-text bold">bodom</p></div>
+    <div class="item"><p class="container-text bold">bodom</p></div>
+    <div class="item"><p class="container-text bold">bodom</p></div>
+    <div class="item"><p class="container-text bold">bodom</p></div>
+    <div class="item"><p class="container-text bold">bodom</p></div>
+    <div class="item"><p class="container-text bold">bodom</p></div>
   </div>
 
   <div id="sync2" class="owl-carousel owl-theme">
