pop up fix + icon contact

--- a/public/index.html
+++ b/public/index.html
@@ -181,63 +181,63 @@
             Pod mroczną górą
           </p>
           <img src="./img/movies/side.png" class="shot_movie" role="presentation" alt="#" />
-        </li>
-      </ul>
-    </div>
-    <div class="pop_up">
-      <div class="container">
-        <svg class="movie_cross" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        </li>    <div class="pop_up">
+        <div class="container">
+          <svg class="movie_cross" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
            viewBox="0 0 371.23 371.23" style="enable-background:new 0 0 371.23 371.23;" xml:space="preserve">
         <polygon points="371.23,21.213 350.018,0 185.615,164.402 21.213,0 0,21.213 164.402,185.615 0,350.018 21.213,371.23
           185.615,206.828 350.018,371.23 371.23,350.018 206.828,185.615 "/>
         </svg>
-      <div class="pop_up_left">
-        <img src="img/movies/bodom.png" class="pop_up_image" alt="#" role="presentation" />
-        <div class="pop_up_buttons">
-          <a href="#" class="pop_up_view">zobacz zwiastun</a>
+          <div class="pop_up_left">
+            <img src="img/movies/bodom.png" class="pop_up_image" alt="#" role="presentation" />
+            <div class="pop_up_buttons">
+              <a href="#" class="pop_up_view">zobacz zwiastun</a>
+            </div>
+          </div>
+          <div class="pop_up_right">
+            <p class="movie_name_point bold red">Bodom</p>
+            <p class="movie_description"><span class="white_sepo">Finlandia, Estonia 2016 </span><span class="white_sepo">85 min </span><span class="white_sepo">horror </span><span class="white_sepo">reż: Taneli Mustonen </span></p>
+            <p class="movie_name">
+              <span class="movie_obsada bold">Obsada:</span>
+              <span class="white_sepo">Nelly Hirst-Gee</span>
+              <span class="white_sepo">Santeri Helinheimo Mäntylä</span>
+              <span class="white_sepo">Mimosa Willamo</span>
+              <span class="white_sepo">Mimosa Gabriel</span>
+            </p>
+            <p class="movie_short red bold">
+              Brutalny fiński horror inspirowany prawdziwą masakrą nad jeziorem Bodom z 1960 roku, która wstrząsnęła całym krajem i do dziś budzi gorące emocje. Reżyser filmu, Taneli Mustonen, znalazł się na liście 10 najbardziej utalentowanych młodych filmowców ze Skandynawii,
+              przygotowanej przez prestiżowy magazyn Variety.
+            </p>
+            <p class="movie_short">
+              Latem 1960 roku czworo obozujących nad jeziorem nastolatków zostaje brutalnie zaatakowanych nożem podczas snu. Masakrę przeżywa tylko jedno z nich, jednakże nic nie pamięta z koszmarnej nocy, a sam morderca nie zostaje zidentyfikowany ani ujęty. Legendy głoszą, że do dziś ukrywa się w pobliskich lasach. Pół wieku później obozowisko nad jeziorem Bodom odwiedza grupa młodych śmiałków z nadzieją na dobrą zabawę i rozwiązanie tajemniczej sprawy poprzez szczegółowe odtworzenie okrutnego morderstwa. Gdy zapada noc, okazuje się jednak, że nie wszyscy przybyli tu z czystymi intencjami. Stawką w pełnej zaskakujących zwrotów akcji śmiertelnej grze będzie
+              ich życie.
+            </p>
+            <p class="movie_name bold">
+              Media o filmie
+            </p>
+            <p class="movie_press">
+              „Znakomity fiński slasher” –
+              <span class="red bold">The Hollywood Reporter</span>
+            </p>
+            <p class="movie_press">
+              “Inteligentny” –
+              <span class="red bold">Screendaily</span>
+            </p>
+            <p class="movie_press">
+              “Zaskakujący”  –
+              <span class="red bold">Horrorfreaknews</span>
+            </p>
+            <div class="movie_skin">
+              <img src="./img/other/bodom_skin.png" class="movie_skin_one" alt="" role="presentation"/>
+              <img src="./img/other/bodom_skin.png" class="movie_skin_one" alt="" role="presentation"/>
+              <img src="./img/other/bodom_skin.png" class="movie_skin_one" alt="" role="presentation"/>
+              <img src="./img/other/bodom_skin.png" class="movie_skin_one" alt="" role="presentation"/>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="pop_up_right">
-        <p class="movie_name_point bold red">Bodom</p>
-        <p class="movie_description"><span class="white_sepo">Finlandia, Estonia 2016 </span><span class="white_sepo">85 min </span><span class="white_sepo">horror </span><span class="white_sepo">reż: Taneli Mustonen </span></p>
-        <p class="movie_name">
-          <span class="movie_obsada bold">Obsada:</span>
-          <span class="white_sepo">Nelly Hirst-Gee</span>
-          <span class="white_sepo">Santeri Helinheimo Mäntylä</span>
-          <span class="white_sepo">Mimosa Willamo</span>
-          <span class="white_sepo">Mimosa Gabriel</span>
-        </p>
-        <p class="movie_short red bold">
-          Brutalny fiński horror inspirowany prawdziwą masakrą nad jeziorem Bodom z 1960 roku, która wstrząsnęła całym krajem i do dziś budzi gorące emocje. Reżyser filmu, Taneli Mustonen, znalazł się na liście 10 najbardziej utalentowanych młodych filmowców ze Skandynawii,
-          przygotowanej przez prestiżowy magazyn Variety.
-        </p>
-        <p class="movie_short">
-          Latem 1960 roku czworo obozujących nad jeziorem nastolatków zostaje brutalnie zaatakowanych nożem podczas snu. Masakrę przeżywa tylko jedno z nich, jednakże nic nie pamięta z koszmarnej nocy, a sam morderca nie zostaje zidentyfikowany ani ujęty. Legendy głoszą, że do dziś ukrywa się w pobliskich lasach. Pół wieku później obozowisko nad jeziorem Bodom odwiedza grupa młodych śmiałków z nadzieją na dobrą zabawę i rozwiązanie tajemniczej sprawy poprzez szczegółowe odtworzenie okrutnego morderstwa. Gdy zapada noc, okazuje się jednak, że nie wszyscy przybyli tu z czystymi intencjami. Stawką w pełnej zaskakujących zwrotów akcji śmiertelnej grze będzie
-          ich życie.
-        </p>
-        <p class="movie_name bold">
-          Media o filmie
-        </p>
-        <p class="movie_press">
-          „Znakomity fiński slasher” –
-          <span class="red bold">The Hollywood Reporter</span>
-        </p>
-        <p class="movie_press">
-          “Inteligentny” –
-          <span class="red bold">Screendaily</span>
-        </p>
-        <p class="movie_press">
-          “Zaskakujący”  –
-          <span class="red bold">Horrorfreaknews</span>
-        </p>
-        <div class="movie_skin">
-          <img src="./img/other/bodom_skin.png" class="movie_skin_one" alt="" role="presentation"/>
-          <img src="./img/other/bodom_skin.png" class="movie_skin_one" alt="" role="presentation"/>
-          <img src="./img/other/bodom_skin.png" class="movie_skin_one" alt="" role="presentation"/>
-          <img src="./img/other/bodom_skin.png" class="movie_skin_one" alt="" role="presentation"/>
-        </div>
-      </div>
-      </div>
+
+      </ul>
     </div>
   </section>
   <!-- END Movies -->
@@ -287,12 +287,24 @@
       <div class="contact_box">
         <div class="contact_info">
           <p class="bold">Patronat, Informacja</p>
-          <img src="./img/other/icon_mail.png" class="icon_mail" alt="#" role="presentation" /><a class="blue" href="mailto:kontakt@festmakabra.pl">kontakt@festmakabra.pl</a>
+          <svg class="icon_mail" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 485.411 485.411" style="enable-background:new 0 0 485.411 485.411;" xml:space="preserve" width="512px" height="512px">
+<g>
+	<path d="M0,81.824v321.763h485.411V81.824H0z M242.708,280.526L43.612,105.691h398.187L242.708,280.526z    M163.397,242.649L23.867,365.178V120.119L163.397,242.649z M181.482,258.533l61.22,53.762l61.22-53.762L441.924,379.72H43.487   L181.482,258.533z M322.008,242.655l139.535-122.536v245.059L322.008,242.655z" fill="#FFFFFF"/>
+</g>
+</svg><a class="blue" href="mailto:kontakt@festmakabra.pl">kontakt@festmakabra.pl</a>
           <p class="bold">Kina i Organizacja Pokazów</p>
-          <img src="./img/other/icon_mail.png" class="icon_mail" alt="#" role="presentation" />
+          <svg class="icon_mail" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 485.411 485.411" style="enable-background:new 0 0 485.411 485.411;" xml:space="preserve" width="512px" height="512px">
+<g>
+	<path d="M0,81.824v321.763h485.411V81.824H0z M242.708,280.526L43.612,105.691h398.187L242.708,280.526z    M163.397,242.649L23.867,365.178V120.119L163.397,242.649z M181.482,258.533l61.22,53.762l61.22-53.762L441.924,379.72H43.487   L181.482,258.533z M322.008,242.655l139.535-122.536v245.059L322.008,242.655z" fill="#FFFFFF"/>
+</g>
+</svg>
           <a class="blue" href="mailto:tomek.kocwin@kinoswiat.pl">tomek.kocwin@kinoswiat.pl</a>
         </div>
-        <img src="./img/other/mail_icon.png" class="contact_icon" alt="#" role="presentation" />
+        <svg class="contact_icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 485.411 485.411" style="enable-background:new 0 0 485.411 485.411;" xml:space="preserve" width="512px" height="512px">
+<g>
+	<path d="M0,81.824v321.763h485.411V81.824H0z M242.708,280.526L43.612,105.691h398.187L242.708,280.526z    M163.397,242.649L23.867,365.178V120.119L163.397,242.649z M181.482,258.533l61.22,53.762l61.22-53.762L441.924,379.72H43.487   L181.482,258.533z M322.008,242.655l139.535-122.536v245.059L322.008,242.655z" fill="#111111"/>
+</g>
+</svg>
       </div>
     </div>
   </section>
