--- a/public/index.html
+++ b/public/index.html
@@ -65,27 +65,35 @@
   <div id="sync2" class="owl-carousel owl-theme">
     <div class="item">
       <img src="./img/movies/burger.png" class="shot_movie" role="presentation" alt="#" />
+      <div class="movie_more">czytaj wiecej</div>
     </div>
     <div class="item">
       <img src="./img/movies/bodom.png" class="shot_movie" role="presentation" alt="#" />
+      <div class="movie_more">czytaj wiecej</div>
     </div>
     <div class="item">
       <img src="./img/movies/burger.png" class="shot_movie" role="presentation" alt="#" />
+      <div class="movie_more">czytaj wiecej</div>
     </div>
     <div class="item">
       <img src="./img/movies/klatwa.png" class="shot_movie" role="presentation" alt="#" />
+      <div class="movie_more">czytaj wiecej</div>
     </div>
     <div class="item">
       <img src="./img/movies/atack.png" class="shot_movie" role="presentation" alt="#" />
+      <div class="movie_more">czytaj wiecej</div>
     </div>
     <div class="item">
       <img src="./img/movies/side.png" class="shot_movie" role="presentation" alt="#" />
+      <div class="movie_more">czytaj wiecej</div>
     </div>
     <div class="item">
       <img src="./img/movies/bodom.png" class="shot_movie" role="presentation" alt="#" />
+      <div class="movie_more">czytaj wiecej</div>
     </div>
     <div class="item">
       <img src="./img/movies/bodom.png" class="shot_movie" role="presentation" alt="#" />
+      <div class="movie_more">czytaj wiecej</div>
     </div>
   </div>
   <!-- About -->
