--- a/public/index.html
+++ b/public/index.html
@@ -53,13 +53,13 @@
 </header>
 <main>
   <div id="sync1" class="owl-carousel owl-theme">
-    <div class="item"><p class="container-text bold">bodom</p></div>
-    <div class="item"><p class="container-text bold">bodom</p></div>
-    <div class="item"><p class="container-text bold">bodom</p></div>
-    <div class="item"><p class="container-text bold">bodom</p></div>
-    <div class="item"><p class="container-text bold">bodom</p></div>
-    <div class="item"><p class="container-text bold">bodom</p></div>
-    <div class="item"><p class="container-text bold">bodom</p></div>
+    <div class="item"><p class="container-text bold writing" data-text="bodom">bodom</p></div>
+    <div class="item"><p class="container-text bold writing" data-text="bodom1">bodom1</p></div>
+    <div class="item"><p class="container-text bold writing" data-text="bodom2">bodom2</p></div>
+    <div class="item"><p class="container-text bold writing" data-text="bodom3">bodom3</p></div>
+    <div class="item"><p class="container-text bold writing" data-text="bodom4">bodom4</p></div>
+    <div class="item"><p class="container-text bold writing" data-text="bodom5">bodom5</p></div>
+    <div class="item"><p class="container-text bold writing" data-text="bodom6">bodom6</p></div>
   </div>
 
   <div id="sync2" class="owl-carousel owl-theme">
@@ -85,10 +85,6 @@
     </div>
     <div class="item">
       <img src="./img/movies/side.png" class="shot_movie" role="presentation" alt="#" />
-      <div class="movie_more">czytaj wiecej</div>
-    </div>
-    <div class="item">
-      <img src="./img/movies/bodom.png" class="shot_movie" role="presentation" alt="#" />
       <div class="movie_more">czytaj wiecej</div>
     </div>
     <div class="item">
