--- a/public/index.html
+++ b/public/index.html
@@ -74,22 +74,27 @@
     <div class="item">
       <img src="./img/movies/burger.png" class="shot_movie" role="presentation" alt="#" />
       <div class="movie_more">czytaj wiecej</div>
+      <div class="movie_more_black"></div>
     </div>
     <div class="item">
       <img src="./img/movies/klatwa.png" class="shot_movie" role="presentation" alt="#" />
       <div class="movie_more">czytaj wiecej</div>
+      <div class="movie_more_black"></div>
     </div>
     <div class="item">
       <img src="./img/movies/atack.png" class="shot_movie" role="presentation" alt="#" />
       <div class="movie_more">czytaj wiecej</div>
+      <div class="movie_more_black"></div>
     </div>
     <div class="item">
       <img src="./img/movies/side.png" class="shot_movie" role="presentation" alt="#" />
       <div class="movie_more">czytaj wiecej</div>
+      <div class="movie_more_black"></div>
     </div>
     <div class="item">
       <img src="./img/movies/bodom.png" class="shot_movie" role="presentation" alt="#" />
       <div class="movie_more">czytaj wiecej</div>
+      <div class="movie_more_black"></div>
     </div>
   </div>
   <!-- About -->
