--- a/public/index.html
+++ b/public/index.html
@@ -190,7 +190,8 @@
             Pod mroczną górą
           </p>
           <img src="./img/movies/side.png" class="shot_movie" role="presentation" alt="#" />
-        </li>    <div class="pop_up">
+        </li>
+        <div class="pop_up">
         <div class="container">
           <svg class="movie_cross" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
            viewBox="0 0 371.23 371.23" style="enable-background:new 0 0 371.23 371.23;" xml:space="preserve">
@@ -200,7 +201,7 @@
           <div class="pop_up_left">
             <img src="img/movies/bodom.png" class="pop_up_image" alt="#" role="presentation" />
             <div class="pop_up_buttons">
-              <a href="#" class="pop_up_view">zobacz zwiastun</a>
+              <a href="" class="pop_up_view" id="open_pop_up_video">zobacz zwiastun</a>
             </div>
           </div>
           <div class="pop_up_right">
@@ -245,6 +246,20 @@
           </div>
         </div>
       </div>
+        <!-- YouTube -->
+        <section id="pop_up_video" class="pop_up_video">
+          <div>
+            <div>
+              <a href="" id="pop_up_video_bg" class="pop_up_video_bg"></a>
+              <div id="video_container" class="video_container">
+                <div id="video" class="video">
+                  <iframe width="560" height="315" id="pop_up_video_iframe" src="" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- End YouTube -->
 
       </ul>
     </div>
