fix menu + "filmy"

--- a/public/index.html
+++ b/public/index.html
@@ -114,16 +114,34 @@
           </p>
           <p>
             <span class="red bold">KINO ŚWIAT</span>
-             – polska firma dystrybucyjna założona w 2001 roku, zajmująca się dystrybucją kina polskiego i zagranicznego. Dwukrotny laureat przyznawanej przez PISF nagrody w kategorii Najlepsza dystrybucja filmu polskiego oraz wielokrotny zdobywca „Złotych biletów” branżowego
+            – polska firma dystrybucyjna założona w 2001 roku, zajmująca się dystrybucją kina polskiego i zagranicznego. Dwukrotny laureat przyznawanej przez PISF nagrody w kategorii Najlepsza dystrybucja filmu polskiego oraz wielokrotny zdobywca „Złotych biletów” branżowego
             Forum Wokół Kina. W katalogu KINO ŚWIAT znajdują się największe hity kinowe ostatnich lat:
           </p>
-          <span class="about_movies red bold">„Pitbull: Niebezpieczne kobiety”</span>
-          <span class="about_movies bold">„Ostatnia rodzina”</span>
-          <span class="about_movies red bold">„Pod mocnym aniołem”</span>
-          <span class="about_movies bold">„Planeta singli”</span>
-          <span class="about_movies red bold">„Listy do M. 2”</span>
-          <span class="about_movies bold">„Jesteś Bogiem”</span>
-          <span class="about_movies red bold">„Miasto 44”</span>
+          <span class="about_movies">„Pitbull: Niebezpieczne kobiety”</span>
+          <span class="about_movies">„Ostatnia rodzina”</span>
+          <span class="about_movies">„Pod mocnym aniołem”</span>
+          <span class="about_movies">„Planeta singli”</span>
+          <span class="about_movies">„Listy do M. 2”</span>
+          <span class="about_movies">„Jesteś Bogiem”</span>
+          <span class="about_movies">„Miasto 44”</span>
+          <br />
+          <p>
+            <span class="red bold">FILMY:</span>
+          </p>
+          <span class="about_movies">
+            <span class="red bold">Bodom</span>  (2016) reż. Taneli Mustonen | Finlandia</span>
+          <span class="about_movies">
+            <span class="red bold">Amerykański burger</span> (2014) reż. Johan Bromander, Bonita Darke | Szwecja</span>
+          <span class="about_movies">
+            <span class="red bold">Klątwa Śpiącek Królewny</span> (2016) reż. Peary Reginaldo Teo | USA</span>
+          <span class="about_movies">
+            <span class="red bold">Atak krwiożerczych donatów</span> (2016) reż. Scott Wheeler | USA</span>
+          <span class="about_movies">
+            <span class="red bold">Pod mroczną górą</span> (2014) reż. Nick Szostakiwskyj | Kanada</span>
+          <span class="about_movies">
+            <span class="red bold">Zombie express</span> (2016) reż. Sang-ho Yeon | Korea Południowa</span>
+          <span class="about_movies">
+            <span class="red bold">Lament</span> (2016) reż. Hong-jin Na | Korea Południowa</span>
         </div>
       </div>
     </div>
