fix header slider

--- a/public/index.html
+++ b/public/index.html
@@ -117,13 +117,13 @@
             – polska firma dystrybucyjna założona w 2001 roku, zajmująca się dystrybucją kina polskiego i zagranicznego. Dwukrotny laureat przyznawanej przez PISF nagrody w kategorii Najlepsza dystrybucja filmu polskiego oraz wielokrotny zdobywca „Złotych biletów” branżowego
             Forum Wokół Kina. W katalogu KINO ŚWIAT znajdują się największe hity kinowe ostatnich lat:
           </p>
-          <span class="about_movies">„Pitbull: Niebezpieczne kobiety”</span>
-          <span class="about_movies">„Ostatnia rodzina”</span>
-          <span class="about_movies">„Pod mocnym aniołem”</span>
-          <span class="about_movies">„Planeta singli”</span>
-          <span class="about_movies">„Listy do M. 2”</span>
-          <span class="about_movies">„Jesteś Bogiem”</span>
-          <span class="about_movies">„Miasto 44”</span>
+          <span class="about_movies inline">„Pitbull: Niebezpieczne kobiety”</span>
+          <span class="about_movies inline">„Ostatnia rodzina”</span>
+          <span class="about_movies inline">„Pod mocnym aniołem”</span>
+          <span class="about_movies inline">„Planeta singli”</span>
+          <span class="about_movies inline">„Listy do M. 2”</span>
+          <span class="about_movies inline">„Jesteś Bogiem”</span>
+          <span class="about_movies inline">„Miasto 44”</span>
           <br />
           <p>
             <span class="red bold">FILMY:</span>
